Add integration with freecounterstat.com

--- a/index.html
+++ b/index.html
@@ -577,6 +577,7 @@
                   </span>
                   <br />
                 </span>
+                <div id="sfcayq2du8t42y9e2m79xj8qbhe1kmr2n83"></div><script type="text/javascript" src="https://counter8.optistats.ovh/private/counter.js?c=ayq2du8t42y9e2m79xj8qbhe1kmr2n83&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter8.optistats.ovh/private/freecounterstat.php?c=ayq2du8t42y9e2m79xj8qbhe1kmr2n83" border="0" title="free hit counter" alt="free hit counter"></a></noscript>
                 <div class="home-icon-group2">
                   <a
                     href="https://twitter.com/eduminate_io"
